Set device viewport correctly, so looks right size on mobile

--- a/style.css
+++ b/style.css
@@ -42,6 +42,5 @@ input[type="checkbox"] {
 }
 
 #welcome {
-    margin-left: 5em;
     text-align: center;
 }
